# kumir3-core

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EN.CONTRIBUTING.md  EN.README.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  test_simple_alg.kum  test_user_library.kum
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask_question.md  bug_report.md  feature_request.md
.github/workflows/: build.yml
arch/en/: BetterDoc.md  FAQ.md
arch/kite/: KITE-0000-standard.html  KITE-0001-language-overview.html  KITE-0002-type-system.html  KITE-0003-async-runtime.html  KITE-0004-environments-scope.html  KITE-0005-libraries.html  KITE-0006-kumir2-compatibility.html  KITE-0007-stdio.html  KITE-0008-style-guide.html  KITE-0009-dev-cycle-debugging.html  KITE-0010-type-engine.html  KITE-0011-oop.html  README.md  index.html
arch/kite/assets/: kite.css  kite.js
arch/kite/assets/themes/: kite-material1.css  kite-material2.css  kite-material3.css  kite-shadcn.css  kite-tokyo-night.css
arch/ru/: BetterDoc.md  TypesInKumir.md  ЧаВо.md
compiler/: Cargo.toml
compiler/src/: ast_to_ir.rs  compiler.rs  lib.rs  main.rs  optimizer.rs  typecheck.rs
compiler/src/backend/: interpreter.rs  mod.rs  rust.rs
compiler/src/codegen/: ir.rs  rust_block.rs
compiler/tests/: compiler_tests.rs  integration_test.rs  optimizer_tests.rs
docs/: COMPILER_GUIDE.md  USER_LIBRARIES.md
examples/: library_kumir.toml  test_direct_file.kum  test_integration.kum  use_test_library.kum
examples/test_user_library/: README.md  kumir.toml
examples/test_user_library/src/: lib.kum
interpreter/: Cargo.toml
interpreter/src/: cli.rs  interpreter_cli.rs  interpreter_tui.rs
interpreter/src/interpreter/: builtins.rs  environment.rs  error.rs  evaluator.rs  executor.rs  file_importer.rs  import.rs  library_bridge.rs  mod.rs  oop.rs  run.rs  typeops_characterization.rs
interpreter/src/interpreter/builtins/: array.rs  io.rs  math.rs  mod.rs  string.rs  types.rs
interpreter/src/interpreter/environment/: frame.rs  mod.rs  scope.rs
interpreter/src/interpreter/evaluator/: array.rs  binary.rs  call.rs  cast.rs  field.rs  instance.rs  match.rs  method.rs  mod.rs  pipe.rs  range.rs  string.rs  unary.rs
interpreter/src/interpreter/executor/: control.rs  import.rs  io.rs  loops.rs  match.rs  mod.rs  rust_block.rs  statements.rs
interpreter/src/interpreter/ops/: binary.rs  cast.rs  defaults.rs  mod.rs  predicates.rs  unary.rs
interpreter/src/interpreter_tui/: ast.rs  check.rs  file_runner.rs  info.rs  main.rs  repl.rs  terminal.rs  ui.rs
kumir-examples/: EN.how-to-run.md  how-to-run.md  http_server_with_html.kum  return.kum  rust_block.kum  simple.kum
shared/: Cargo.toml  build.rs
shared/src/: f128.rs  iostream.rs  lexer.rs  lib.rs  math.rs  strings.rs
shared/src/codegen/: ir.rs  mod.rs  rust_block.rs
shared/src/constants/: builtins.rs  ident.rs  keywords.rs  math.rs  mod.rs  operators.rs  tests.rs
shared/src/f128/: mod.rs  tests.rs
shared/src/iostream/: mod.rs  tests.rs
shared/src/lexer/: comments.rs  identifiers.rs  mod.rs  numbers.rs  operators.rs  rust_blocks.rs  scanner.rs  strings.rs  tests.rs
shared/src/libraries/: mod.rs  registry.rs  user_library.rs
shared/src/libraries/files/: dir.rs  io.rs  meta.rs  mod.rs  ops.rs
shared/src/libraries/net/: http.rs  mod.rs  tcp.rs  udp.rs  utils.rs
shared/src/libraries/net/http/: body.rs  client.rs  request.rs  response.rs  server.rs  types.rs  ws.rs
shared/src/libraries/syscall/: constants.rs  env.rs  mod.rs  path.rs  process.rs  sysinfo.rs
shared/src/libraries/time/: constants.rs  datetime.rs  format.rs  mod.rs  sleep.rs  timer.rs
shared/src/math/: mod.rs  tests.rs
shared/src/parser/: core.rs  decl.rs  error.rs  expr.rs  mod.rs  oop.rs  pattern.rs  precedence.rs  stmt.rs  types.rs
shared/src/runtime/: callback.rs  channel.rs  events.rs  executor.rs  handle.rs  mod.rs
shared/src/strings/: mod.rs  tests.rs
shared/src/types/: algorithm.rs  class.rs  config.rs  environment.rs  expr.rs  import_spec.rs  library.rs  mod.rs  number.rs  pattern.rs  program.rs  registry.rs  resolver.rs  stmt.rs  token.rs  type_spec.rs  value.rs  venv_loader.rs  version.rs
shared/src/typesys/: mod.rs  rules.rs  tests.rs
shared/tests/: constants_characterization.rs
shared/tests/golden/: builtins.snapshot  keywords.snapshot
src/: kum_cli.rs  kum_interpreter.rs  lib.rs
src/interpreter/: builtins.rs  environment.rs  error.rs  evaluator.rs  executor.rs  file_importer.rs  library_bridge.rs  mod.rs
src/shared/: f128.rs  iostream.rs  lexer.rs  math.rs  mod.rs  strings.rs
src/shared/codegen/: mod.rs  rust_block.rs
src/shared/constants/: builtins.rs  errors.rs  ident.rs  keywords.rs  math.rs  mod.rs  operators.rs
src/shared/libraries/: mod.rs  registry.rs
src/shared/libraries/files/: dir.rs  io.rs  meta.rs  mod.rs  ops.rs
src/shared/libraries/net/: core.rs  mod.rs  tls.rs
src/shared/libraries/net/http/: body.rs  client.rs  deps.rs  extractors.rs  middleware.rs  mod.rs  openapi.rs  request.rs  response.rs  router.rs  server.rs  ws.rs
src/shared/libraries/syscall/: constants.rs  env.rs  mod.rs  path.rs  process.rs  sysinfo.rs
src/shared/libraries/time/: constants.rs  datetime.rs  format.rs  mod.rs  sleep.rs  timer.rs
src/shared/parser/: core.rs  decl.rs  error.rs  expr.rs  mod.rs  oop.rs  pattern.rs  precedence.rs  stmt.rs  types.rs
src/shared/runtime/: callback.rs  channel.rs  events.rs  executor.rs  handle.rs
src/shared/types/: algorithm.rs  class.rs  environment.rs  import_spec.rs  mod.rs  number.rs  resolver.rs  stmt.rs  token.rs  value.rs  version.rs
tests/: Cargo.toml  constant.rs  f128_tests.rs  iostream.rs  lexer.rs  math.rs  strings.rs  test_multi_decl.kum
tests/src/: constant.rs  constants_characterization.rs  f128_tests.rs  iostream.rs  lexer.rs  lib.rs  math.rs  strings.rs  test_http_client.kum  test_http_server.kum  user_library_tests.rs
tests/src/golden/: operators.snapshot
tools/: install-hooks.ps1  install-hooks.sh
