[package]
name = "kumir3-core"
version = "3.0.0-dev"
edition = "2024"
description = "Kumir 3 - Core Library"
authors = [
    "Vadim Khristenko <just@vai-prog.ru>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vadim-Khristenko/kumir3-core"
default-run = "kumir3-cli"
readme = "README.md"
keywords = ["kumir3", "kumir", "kumir3-core", "core", "library"]

[dependencies]
# This is virtual manifest so no there's no need for package table

[workspace.dependencies]
c = "1.5"
dirs = "6.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio-rustls = "0.26.4"
rustls = "0.23.36"
webpki-roots = "1.0.5"
rustls-pemfile = "2.2.0"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "3.1"
ratatui = "0.30.0"
crossterm = "0.29"

[workspace]
members = ["compiler", "interpreter", "shared", "tests"]
resolver = "2"
