[workspace]
members = ["compiler", "interpreter", "shared", "tests"]
resolver = "2"

[workspace.dependencies]
once_cell = "1.21"
lazy_static = "1.5"
c = "1.5"
dirs = "6.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio-rustls = "0.26.4"
rustls = "0.23.36"
webpki-roots = "1.0.5"
rustls-pemfile = "2.2.0"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "3.1"
ratatui = "0.30.0"
crossterm = "0.29"
