[workspace]
members = ["compiler", "interpreter", "shared", "tests"]
resolver = "2"

# Политика линтов (общая для всех крейтов; подключается `[lints] workspace = true`).
# На стадии альфы часть шумных/намеренных предупреждений разрешена, чтобы CI был
# зелёным со строгим `clippy -D warnings`. Будет ужесточено при чистке кода.
[workspace.lints.rust]
dead_code = "allow"            # намеренная заготовленная поверхность API
unused = "allow"               # неиспользуемые импорты/переменные на стадии разработки
unreachable_patterns = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
result_large_err = "allow"
derived_hash_with_manual_eq = "allow"   # Value: ручной PartialEq + Hash согласованы через to_string
inherent_to_string_shadow_display = "allow"
approx_constant = "allow"               # математические константы высокой точности
while_let_loop = "allow"
needless_range_loop = "allow"
manual_strip = "allow"
if_same_then_else = "allow"
unusual_byte_groupings = "allow"
assertions_on_constants = "allow"
ptr_arg = "allow"
match_like_matches_macro = "allow"
single_match = "allow"
vec_init_then_push = "allow"
redundant_clone = "allow"
comparison_chain = "allow"
too_many_lines = "allow"

[workspace.dependencies]
once_cell = "1.21"
lazy_static = "1.5"
c = "1.5"
dirs = "6.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio-rustls = "0.26.4"
rustls = "0.23.36"
webpki-roots = "1.0.5"
rustls-pemfile = "2.2.0"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "3.1"
ratatui = "0.30.0"
crossterm = "0.29"
phf = { version = "0.13", features = ["macros"] }
phf_codegen = "0.13"
