[package]
name = "kumir3-compiler"
version = "0.2.0-alpha.1"
edition = "2024"
description = "Kumir 3 Compiler"
authors = ["Vadim Khristenko <just@vai-prog.ru>"]
license-file = "LICENSE"
repository = "https://github.com/Vadim-Khristenko/kumir3-core"
readme = "README.md"
keywords = ["kumir3", "kumir", "kumir3-compiler", "compiler"]

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true
