[package]
name = "kumir3-interpreter"
version = "0.2.0-alpha.1"
edition = "2024"
description = "Kumir 3 Interpreter"
authors = ["Vadim Khristenko <just@vai-prog.ru>"]
license-file = "LICENSE"
repository = "https://github.com/Vadim-Khristenko/kumir3-core"
readme = "README.md"
keywords = ["kumir3", "kumir", "kumir3-interpreter","interpreter"]

[dependencies]
shared = {path = "../shared"}
once_cell = {workspace = true}
lazy_static = {workspace = true}
dirs = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio-rustls = {workspace = true}
rustls = {workspace = true}
webpki-roots = {workspace = true}
rustls-pemfile = {workspace = true}
clap = {workspace = true}
colored = {workspace = true}
ratatui = {workspace = true}
crossterm = {workspace = true}

[[bin]]
name = "interpreter-cli"
path = "src/interpreter_cli.rs"

[[bin]]
name = "interpreter-tui"
path = "src/interpreter_tui.rs"

[lints]
workspace = true