[package]
name = "shared"
version = "0.2.0-alpha.1"
edition = "2024"
authors = ["Vadim Khristenko <just@vai-prog.ru>"]
license-file = "LICENSE"
repository = "https://github.com/Vadim-Khristenko/kumir3-core"
readme = "README.md"
keywords = ["kumir3", "kumir", "kumir3-core", "core", "library"]

[dependencies]
once_cell = {workspace = true}
lazy_static = {workspace = true}
dirs = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio-rustls = {workspace = true}
rustls = {workspace = true}
webpki-roots = {workspace = true}
rustls-pemfile = {workspace = true}
clap = {workspace = true}
colored = {workspace = true}
ratatui = {workspace = true}
crossterm = {workspace = true}
phf = {workspace = true}

[build-dependencies]
phf_codegen = {workspace = true}

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true
